[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/slime-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/slime/Slime.gd" type="Script" id=2]
[ext_resource path="res://src/boxes/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45.0001, 27 )

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63, 31.5 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 1 )
hframes = 8
vframes = 3
frame = 5

[node name="SlimeHurtbox" parent="Sprite" instance=ExtResource( 3 )]
scale = Vector2( 0.222222, 0.222222 )

[node name="CollisionShape2D" parent="Sprite/SlimeHurtbox" index="0"]
position = Vector2( 3.69549e-06, 25 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )
anims/move = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 20.5 )
shape = SubResource( 1 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( -51, 10 )
enabled = true
collision_mask = 4
collide_with_areas = true

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 51, 10 )
enabled = true
collision_mask = 4
collide_with_areas = true

[connection signal="area_entered" from="Sprite/SlimeHurtbox" to="." method="_on_SlimeHurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Sprite/SlimeHurtbox"]
